# whitelistmcp

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CREDENTIALS_GUIDE.md  Dockerfile  Dockerfile.remote  ENV_README.md  FUTURE.md  LOCAL_DEMO_GUIDE.md  MCP_COMPLIANCE_REPORT.md  MCP_DIAGNOSTIC_SCRIPT.md  MCP_PYTHON_STDOUT_GUIDE.md  Makefile  PACKAGING_GUIDE.md  PROJECT_SETUP.md  README.md  REMOTE_SETUP.md  REQUIREMENTS.md  TODO.md  check_code_quality.py  claude_desktop_config.json  claude_desktop_config_clean.json  claude_desktop_config_clean_example.json  claude_desktop_config_example.json  claude_desktop_config_fixed.json  claude_desktop_config_minimal.json  comprehensive-schema-check.py  config_manager.py  create-clean-config.ps1  debug-awswhitelist.ps1  docker-compose.remote.yml  docker-compose.yml  fix-logging-stdout.py  fix_imports.py  install-windows.ps1  (+26 more)
.github/workflows/: ci.yml  release.yml
archive/: check-schemas-static.py  check-version.ps1  fix-claude-config.ps1  fix-encoding.ps1  fix-json-syntax.ps1  install-windows-minimal.ps1  mcptest.txt  test-direct.py  test-json-output-fixed.ps1  test-json-output.ps1  test-mcp-methods.py  test-mcp-server-list.ps1  test-server-version.ps1
aws/cloudformation/: mcp-server-ecs.yaml
awswhitelist/: __version__.py  cloud_service.py  config.py  remote_server.py
awswhitelist/aws/: service.py
awswhitelist/azure/: service.py
awswhitelist/gcp/: __init__.py  service.py
docs/: AWS_DEPLOYMENT_GUIDE.md  CLAUDE_DESKTOP_SETUP.md  CREDENTIAL_MANAGEMENT_DESIGN.md  CREDENTIAL_MANAGEMENT_SUMMARY.md  EC2_DOCKER_DEPLOYMENT_GUIDE.md  LOCAL_DEMO_GUIDE.md  MCP_COMPLIANCE_CHECKLIST.md  MCP_COMPLIANCE_REPORT.md  MCP_CREDENTIAL_PATTERNS.md  MCP_PYTHON_STDOUT_GUIDE.md  MCP_REQUEST_EXAMPLES.md  PRODUCTION_DEPENDENCIES_GUIDE.md  REMOTE_HOSTING_GUIDE.md
mcp_server/: README.md  SETUP_GUIDE.md  claude_desktop_config.json  claude_desktop_config_env.json  index.ts  package.json  requirements.txt  server.py  server_env.py  test_client.py  tsconfig.json
scripts/: deploy-ec2-docker.sh  deploy-to-aws.sh  mcp-remote-proxy.py
simple_test/: FUTURE.md  README.md  REQUIREMENTS.md  TODO.md  add_ip_1111_to_sg.py  add_ip_to_sg.py  add_ip_to_sg_v2.py  add_port_8080_rule.py  add_sg_rule_env.py  add_sg_rule_json.py  example_config.json  quick_start.bat  requirements.txt  test_aws_access.py  update_sg_description.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_aws_service.py  test_cloud_service.py  test_config.py  test_credential_validator.py  test_ip_validator.py  test_main.py  test_mcp_handler.py
whitelistmcp/: __init__.py  __version__.py  cloud_service.py  config.py  main.py  remote_server.py
whitelistmcp/aws/: service.py
whitelistmcp/azure/: __init__.py  service.py
whitelistmcp/gcp/: service.py
whitelistmcp/mcp/: handler.py
whitelistmcp/utils/: credential_validator.py  ip_validator.py  logging.py
